// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculateLayout integration suite should calculate layout for node -> [node -> text, node -> text] with layout props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "body": "Hello",
              "dimensions": Object {
                "height": 1,
                "width": 5,
              },
              "placement": Object {
                "x": 2,
                "y": 2,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 2,
            "y": 2,
          },
          "type": "ContainerLayout",
        },
        Object {
          "children": Array [
            Object {
              "body": "World",
              "dimensions": Object {
                "height": 1,
                "width": 5,
              },
              "placement": Object {
                "x": 2,
                "y": 5,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 3,
            "width": 7,
          },
          "placement": Object {
            "x": 1,
            "y": 4,
          },
          "type": "ContainerLayout",
        },
      ],
      "dimensions": Object {
        "height": 6,
        "width": 9,
      },
      "placement": Object {
        "x": 0,
        "y": 1,
      },
      "type": "ContainerLayout",
    },
  ],
  "dimensions": Object {
    "height": 7,
    "width": 9,
  },
  "placement": Object {
    "x": 0,
    "y": 0,
  },
  "type": "RootLayout",
}
`;

exports[`calculateLayout integration suite should calculate layout for node -> [node -> text, node -> text] with layout props 2`] = `
Array [
  Object {
    "body": Object {
      "style": null,
      "value": "Hello",
      "x": 2,
      "y": 2,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": "World",
      "x": 2,
      "y": 5,
    },
  },
]
`;

exports[`calculateLayout integration suite should calculate layout for node -> [node -> text, node -> text] without style/layout props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "body": "Hello",
              "dimensions": Object {
                "height": 1,
                "width": 5,
              },
              "placement": Object {
                "x": 0,
                "y": 0,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 0,
            "y": 0,
          },
          "type": "ContainerLayout",
        },
        Object {
          "children": Array [
            Object {
              "body": "World",
              "dimensions": Object {
                "height": 1,
                "width": 5,
              },
              "placement": Object {
                "x": 0,
                "y": 1,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 0,
            "y": 1,
          },
          "type": "ContainerLayout",
        },
      ],
      "dimensions": Object {
        "height": 2,
        "width": 5,
      },
      "placement": Object {
        "x": 0,
        "y": 0,
      },
      "type": "ContainerLayout",
    },
  ],
  "dimensions": Object {
    "height": 2,
    "width": 5,
  },
  "placement": Object {
    "x": 0,
    "y": 0,
  },
  "type": "RootLayout",
}
`;

exports[`calculateLayout integration suite should calculate layout for node -> [node -> text, node -> text] without style/layout props 2`] = `
Array [
  Object {
    "body": Object {
      "style": null,
      "value": "Hello",
      "x": 0,
      "y": 0,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": "World",
      "x": 0,
      "y": 1,
    },
  },
]
`;

exports[`calculateLayout integration suite should calculate layout for node -> [node -> text, text, node -> [text, text]] without style/layout props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "body": "Text1",
              "dimensions": Object {
                "height": 1,
                "width": 5,
              },
              "placement": Object {
                "x": 0,
                "y": 0,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 0,
            "y": 0,
          },
          "type": "ContainerLayout",
        },
        Object {
          "body": "Text2",
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 0,
            "y": 1,
          },
          "type": "UnitLayout",
        },
        Object {
          "children": Array [
            Object {
              "body": "Text3",
              "dimensions": Object {
                "height": 1,
                "width": 5,
              },
              "placement": Object {
                "x": 0,
                "y": 2,
              },
              "type": "UnitLayout",
            },
            Object {
              "body": "Text4",
              "dimensions": Object {
                "height": 1,
                "width": 5,
              },
              "placement": Object {
                "x": 5,
                "y": 2,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 1,
            "width": 10,
          },
          "placement": Object {
            "x": 0,
            "y": 2,
          },
          "type": "ContainerLayout",
        },
      ],
      "dimensions": Object {
        "height": 3,
        "width": 10,
      },
      "placement": Object {
        "x": 0,
        "y": 0,
      },
      "type": "ContainerLayout",
    },
  ],
  "dimensions": Object {
    "height": 3,
    "width": 10,
  },
  "placement": Object {
    "x": 0,
    "y": 0,
  },
  "type": "RootLayout",
}
`;

exports[`calculateLayout integration suite should calculate layout for node -> [node -> text, text, node -> [text, text]] without style/layout props 2`] = `
Array [
  Object {
    "body": Object {
      "style": null,
      "value": "Text1",
      "x": 0,
      "y": 0,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": "Text2",
      "x": 0,
      "y": 1,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": "Text3",
      "x": 0,
      "y": 2,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": "Text4",
      "x": 5,
      "y": 2,
    },
  },
]
`;

exports[`calculateLayout integration suite should calculate layout for node -> [node -> text, text, node -> text] with layout props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "body": "Brave",
              "dimensions": Object {
                "height": 1,
                "width": 5,
              },
              "placement": Object {
                "x": 0,
                "y": 1,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 3,
            "width": 5,
          },
          "placement": Object {
            "x": 0,
            "y": 0,
          },
          "type": "ContainerLayout",
        },
        Object {
          "body": "New",
          "dimensions": Object {
            "height": 1,
            "width": 3,
          },
          "placement": Object {
            "x": 0,
            "y": 3,
          },
          "type": "UnitLayout",
        },
        Object {
          "children": Array [
            Object {
              "body": "World",
              "dimensions": Object {
                "height": 1,
                "width": 5,
              },
              "placement": Object {
                "x": 0,
                "y": 5,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 0,
            "y": 5,
          },
          "type": "ContainerLayout",
        },
      ],
      "dimensions": Object {
        "height": 7,
        "width": 5,
      },
      "placement": Object {
        "x": 0,
        "y": 0,
      },
      "type": "ContainerLayout",
    },
  ],
  "dimensions": Object {
    "height": 7,
    "width": 5,
  },
  "placement": Object {
    "x": 0,
    "y": 0,
  },
  "type": "RootLayout",
}
`;

exports[`calculateLayout integration suite should calculate layout for node -> [node -> text, text, node -> text] with layout props 2`] = `
Array [
  Object {
    "body": Object {
      "style": null,
      "value": "Brave",
      "x": 0,
      "y": 1,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": "New",
      "x": 0,
      "y": 3,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": "World",
      "x": 0,
      "y": 5,
    },
  },
]
`;

exports[`calculateLayout integration suite should calculate layout for node -> [node -> text, text, node -> text] without style/layout props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "body": "Brave",
              "dimensions": Object {
                "height": 1,
                "width": 5,
              },
              "placement": Object {
                "x": 0,
                "y": 0,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 0,
            "y": 0,
          },
          "type": "ContainerLayout",
        },
        Object {
          "body": "New",
          "dimensions": Object {
            "height": 1,
            "width": 3,
          },
          "placement": Object {
            "x": 0,
            "y": 1,
          },
          "type": "UnitLayout",
        },
        Object {
          "children": Array [
            Object {
              "body": "World",
              "dimensions": Object {
                "height": 1,
                "width": 5,
              },
              "placement": Object {
                "x": 0,
                "y": 2,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 0,
            "y": 2,
          },
          "type": "ContainerLayout",
        },
      ],
      "dimensions": Object {
        "height": 3,
        "width": 5,
      },
      "placement": Object {
        "x": 0,
        "y": 0,
      },
      "type": "ContainerLayout",
    },
  ],
  "dimensions": Object {
    "height": 3,
    "width": 5,
  },
  "placement": Object {
    "x": 0,
    "y": 0,
  },
  "type": "RootLayout",
}
`;

exports[`calculateLayout integration suite should calculate layout for node -> [node -> text, text, node -> text] without style/layout props 2`] = `
Array [
  Object {
    "body": Object {
      "style": null,
      "value": "Brave",
      "x": 0,
      "y": 0,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": "New",
      "x": 0,
      "y": 1,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": "World",
      "x": 0,
      "y": 2,
    },
  },
]
`;

exports[`calculateLayout integration suite should calculate layout for node -> [node -> text, text] with layout props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "body": "Hello",
              "dimensions": Object {
                "height": 1,
                "width": 5,
              },
              "placement": Object {
                "x": 1,
                "y": 2,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 1,
            "y": 2,
          },
          "type": "ContainerLayout",
        },
        Object {
          "body": "World",
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 0,
            "y": 4,
          },
          "type": "UnitLayout",
        },
      ],
      "dimensions": Object {
        "height": 6,
        "width": 7,
      },
      "placement": Object {
        "x": 0,
        "y": 0,
      },
      "type": "ContainerLayout",
    },
  ],
  "dimensions": Object {
    "height": 6,
    "width": 7,
  },
  "placement": Object {
    "x": 0,
    "y": 0,
  },
  "type": "RootLayout",
}
`;

exports[`calculateLayout integration suite should calculate layout for node -> [node -> text, text] with layout props 2`] = `
Array [
  Object {
    "body": Object {
      "style": null,
      "value": "Hello",
      "x": 1,
      "y": 2,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": "World",
      "x": 0,
      "y": 4,
    },
  },
]
`;

exports[`calculateLayout integration suite should calculate layout for node -> [node -> text, text] without style/layout props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "body": "Hello",
              "dimensions": Object {
                "height": 1,
                "width": 5,
              },
              "placement": Object {
                "x": 0,
                "y": 0,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 0,
            "y": 0,
          },
          "type": "ContainerLayout",
        },
        Object {
          "body": "World",
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 0,
            "y": 1,
          },
          "type": "UnitLayout",
        },
      ],
      "dimensions": Object {
        "height": 2,
        "width": 5,
      },
      "placement": Object {
        "x": 0,
        "y": 0,
      },
      "type": "ContainerLayout",
    },
  ],
  "dimensions": Object {
    "height": 2,
    "width": 5,
  },
  "placement": Object {
    "x": 0,
    "y": 0,
  },
  "type": "RootLayout",
}
`;

exports[`calculateLayout integration suite should calculate layout for node -> [node -> text, text] without style/layout props 2`] = `
Array [
  Object {
    "body": Object {
      "style": null,
      "value": "Hello",
      "x": 0,
      "y": 0,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": "World",
      "x": 0,
      "y": 1,
    },
  },
]
`;

exports[`calculateLayout integration suite should calculate layout for node -> [text, node -> text, text] with layout props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "body": "Brave",
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 1,
            "y": 1,
          },
          "type": "UnitLayout",
        },
        Object {
          "children": Array [
            Object {
              "body": "New",
              "dimensions": Object {
                "height": 1,
                "width": 3,
              },
              "placement": Object {
                "x": 3,
                "y": 3,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 3,
            "width": 7,
          },
          "placement": Object {
            "x": 1,
            "y": 2,
          },
          "type": "ContainerLayout",
        },
        Object {
          "body": "World",
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 1,
            "y": 5,
          },
          "type": "UnitLayout",
        },
      ],
      "dimensions": Object {
        "height": 5,
        "width": 7,
      },
      "placement": Object {
        "x": 1,
        "y": 1,
      },
      "type": "ContainerLayout",
    },
  ],
  "dimensions": Object {
    "height": 6,
    "width": 9,
  },
  "placement": Object {
    "x": 0,
    "y": 0,
  },
  "type": "RootLayout",
}
`;

exports[`calculateLayout integration suite should calculate layout for node -> [text, node -> text, text] with layout props 2`] = `
Array [
  Object {
    "body": Object {
      "style": null,
      "value": "Brave",
      "x": 1,
      "y": 1,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": "New",
      "x": 3,
      "y": 3,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": "World",
      "x": 1,
      "y": 5,
    },
  },
]
`;

exports[`calculateLayout integration suite should calculate layout for node -> [text, node -> text, text] without style/layout props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "body": "Brave",
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 0,
            "y": 0,
          },
          "type": "UnitLayout",
        },
        Object {
          "children": Array [
            Object {
              "body": "New",
              "dimensions": Object {
                "height": 1,
                "width": 3,
              },
              "placement": Object {
                "x": 0,
                "y": 1,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 1,
            "width": 3,
          },
          "placement": Object {
            "x": 0,
            "y": 1,
          },
          "type": "ContainerLayout",
        },
        Object {
          "body": "World",
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 0,
            "y": 2,
          },
          "type": "UnitLayout",
        },
      ],
      "dimensions": Object {
        "height": 3,
        "width": 5,
      },
      "placement": Object {
        "x": 0,
        "y": 0,
      },
      "type": "ContainerLayout",
    },
  ],
  "dimensions": Object {
    "height": 3,
    "width": 5,
  },
  "placement": Object {
    "x": 0,
    "y": 0,
  },
  "type": "RootLayout",
}
`;

exports[`calculateLayout integration suite should calculate layout for node -> [text, node -> text, text] without style/layout props 2`] = `
Array [
  Object {
    "body": Object {
      "style": null,
      "value": "Brave",
      "x": 0,
      "y": 0,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": "New",
      "x": 0,
      "y": 1,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": "World",
      "x": 0,
      "y": 2,
    },
  },
]
`;

exports[`calculateLayout integration suite should calculate layout for node -> [text, node -> text] with layout props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "body": "Hello",
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 0,
            "y": 1,
          },
          "type": "UnitLayout",
        },
        Object {
          "children": Array [
            Object {
              "body": "World",
              "dimensions": Object {
                "height": 1,
                "width": 5,
              },
              "placement": Object {
                "x": 1,
                "y": 3,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 1,
            "y": 3,
          },
          "type": "ContainerLayout",
        },
      ],
      "dimensions": Object {
        "height": 6,
        "width": 7,
      },
      "placement": Object {
        "x": 0,
        "y": 0,
      },
      "type": "ContainerLayout",
    },
  ],
  "dimensions": Object {
    "height": 6,
    "width": 7,
  },
  "placement": Object {
    "x": 0,
    "y": 0,
  },
  "type": "RootLayout",
}
`;

exports[`calculateLayout integration suite should calculate layout for node -> [text, node -> text] with layout props 2`] = `
Array [
  Object {
    "body": Object {
      "style": null,
      "value": "Hello",
      "x": 0,
      "y": 1,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": "World",
      "x": 1,
      "y": 3,
    },
  },
]
`;

exports[`calculateLayout integration suite should calculate layout for node -> [text, node -> text] without style/layout props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "body": "Hello",
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 0,
            "y": 0,
          },
          "type": "UnitLayout",
        },
        Object {
          "children": Array [
            Object {
              "body": "World",
              "dimensions": Object {
                "height": 1,
                "width": 5,
              },
              "placement": Object {
                "x": 0,
                "y": 1,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 0,
            "y": 1,
          },
          "type": "ContainerLayout",
        },
      ],
      "dimensions": Object {
        "height": 2,
        "width": 5,
      },
      "placement": Object {
        "x": 0,
        "y": 0,
      },
      "type": "ContainerLayout",
    },
  ],
  "dimensions": Object {
    "height": 2,
    "width": 5,
  },
  "placement": Object {
    "x": 0,
    "y": 0,
  },
  "type": "RootLayout",
}
`;

exports[`calculateLayout integration suite should calculate layout for node -> [text, node -> text] without style/layout props 2`] = `
Array [
  Object {
    "body": Object {
      "style": null,
      "value": "Hello",
      "x": 0,
      "y": 0,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": "World",
      "x": 0,
      "y": 1,
    },
  },
]
`;

exports[`calculateLayout integration suite should calculate layout for node -> [text, node(inline) -> text] without style/layout props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "body": "Hello",
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 0,
            "y": 0,
          },
          "type": "UnitLayout",
        },
        Object {
          "children": Array [
            Object {
              "body": " World",
              "dimensions": Object {
                "height": 1,
                "width": 6,
              },
              "placement": Object {
                "x": 5,
                "y": 0,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 1,
            "width": 6,
          },
          "placement": Object {
            "x": 5,
            "y": 0,
          },
          "type": "ContainerLayout(inline)",
        },
      ],
      "dimensions": Object {
        "height": 1,
        "width": 11,
      },
      "placement": Object {
        "x": 0,
        "y": 0,
      },
      "type": "ContainerLayout",
    },
  ],
  "dimensions": Object {
    "height": 1,
    "width": 11,
  },
  "placement": Object {
    "x": 0,
    "y": 0,
  },
  "type": "RootLayout",
}
`;

exports[`calculateLayout integration suite should calculate layout for node -> [text, node(inline) -> text] without style/layout props 2`] = `
Array [
  Object {
    "body": Object {
      "style": null,
      "value": "Hello",
      "x": 0,
      "y": 0,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": " World",
      "x": 5,
      "y": 0,
    },
  },
]
`;

exports[`calculateLayout integration suite should calculate layout for node -> [text, text] with layout props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "body": "Hello",
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 3,
            "y": 3,
          },
          "type": "UnitLayout",
        },
        Object {
          "body": " World",
          "dimensions": Object {
            "height": 1,
            "width": 6,
          },
          "placement": Object {
            "x": 8,
            "y": 3,
          },
          "type": "UnitLayout",
        },
      ],
      "dimensions": Object {
        "height": 3,
        "width": 13,
      },
      "placement": Object {
        "x": 2,
        "y": 2,
      },
      "type": "ContainerLayout",
    },
  ],
  "dimensions": Object {
    "height": 5,
    "width": 15,
  },
  "placement": Object {
    "x": 0,
    "y": 0,
  },
  "type": "RootLayout",
}
`;

exports[`calculateLayout integration suite should calculate layout for node -> [text, text] without style/layout props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "body": "Hello",
          "dimensions": Object {
            "height": 1,
            "width": 5,
          },
          "placement": Object {
            "x": 0,
            "y": 0,
          },
          "type": "UnitLayout",
        },
        Object {
          "body": " World",
          "dimensions": Object {
            "height": 1,
            "width": 6,
          },
          "placement": Object {
            "x": 5,
            "y": 0,
          },
          "type": "UnitLayout",
        },
      ],
      "dimensions": Object {
        "height": 1,
        "width": 11,
      },
      "placement": Object {
        "x": 0,
        "y": 0,
      },
      "type": "ContainerLayout",
    },
  ],
  "dimensions": Object {
    "height": 1,
    "width": 11,
  },
  "placement": Object {
    "x": 0,
    "y": 0,
  },
  "type": "RootLayout",
}
`;

exports[`calculateLayout integration suite should calculate layout for node -> [text, text] without style/layout props 2`] = `
Array [
  Object {
    "body": Object {
      "style": null,
      "value": "Hello",
      "x": 0,
      "y": 0,
    },
  },
  Object {
    "body": Object {
      "style": null,
      "value": " World",
      "x": 5,
      "y": 0,
    },
  },
]
`;

exports[`calculateLayout integration suite should calculate layout for node -> node -> text with layout props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "body": "Hello World",
              "dimensions": Object {
                "height": 1,
                "width": 11,
              },
              "placement": Object {
                "x": 3,
                "y": 2,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 2,
            "width": 11,
          },
          "placement": Object {
            "x": 3,
            "y": 1,
          },
          "type": "ContainerLayout",
        },
      ],
      "dimensions": Object {
        "height": 3,
        "width": 16,
      },
      "placement": Object {
        "x": 0,
        "y": 0,
      },
      "type": "ContainerLayout",
    },
  ],
  "dimensions": Object {
    "height": 3,
    "width": 16,
  },
  "placement": Object {
    "x": 0,
    "y": 0,
  },
  "type": "RootLayout",
}
`;

exports[`calculateLayout integration suite should calculate layout for node -> node -> text with layout props 2`] = `
Array [
  Object {
    "body": Object {
      "style": null,
      "value": "Hello World",
      "x": 3,
      "y": 2,
    },
  },
]
`;

exports[`calculateLayout integration suite should calculate layout for node -> node -> text without style/layout props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "body": "Hello World",
              "dimensions": Object {
                "height": 1,
                "width": 11,
              },
              "placement": Object {
                "x": 0,
                "y": 0,
              },
              "type": "UnitLayout",
            },
          ],
          "dimensions": Object {
            "height": 1,
            "width": 11,
          },
          "placement": Object {
            "x": 0,
            "y": 0,
          },
          "type": "ContainerLayout",
        },
      ],
      "dimensions": Object {
        "height": 1,
        "width": 11,
      },
      "placement": Object {
        "x": 0,
        "y": 0,
      },
      "type": "ContainerLayout",
    },
  ],
  "dimensions": Object {
    "height": 1,
    "width": 11,
  },
  "placement": Object {
    "x": 0,
    "y": 0,
  },
  "type": "RootLayout",
}
`;

exports[`calculateLayout integration suite should calculate layout for node -> node -> text without style/layout props 2`] = `
Array [
  Object {
    "body": Object {
      "style": null,
      "value": "Hello World",
      "x": 0,
      "y": 0,
    },
  },
]
`;

exports[`calculateLayout integration suite should calculate layout for node -> text with layout props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "body": "Hello World",
          "dimensions": Object {
            "height": 1,
            "width": 11,
          },
          "placement": Object {
            "x": 4,
            "y": 2,
          },
          "type": "UnitLayout",
        },
      ],
      "dimensions": Object {
        "height": 3,
        "width": 15,
      },
      "placement": Object {
        "x": 2,
        "y": 1,
      },
      "type": "ContainerLayout",
    },
  ],
  "dimensions": Object {
    "height": 4,
    "width": 17,
  },
  "placement": Object {
    "x": 0,
    "y": 0,
  },
  "type": "RootLayout",
}
`;

exports[`calculateLayout integration suite should calculate layout for node -> text without style/layout props 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "body": "Hello World",
          "dimensions": Object {
            "height": 1,
            "width": 11,
          },
          "placement": Object {
            "x": 0,
            "y": 0,
          },
          "type": "UnitLayout",
        },
      ],
      "dimensions": Object {
        "height": 1,
        "width": 11,
      },
      "placement": Object {
        "x": 0,
        "y": 0,
      },
      "type": "ContainerLayout",
    },
  ],
  "dimensions": Object {
    "height": 1,
    "width": 11,
  },
  "placement": Object {
    "x": 0,
    "y": 0,
  },
  "type": "RootLayout",
}
`;

exports[`calculateLayout integration suite should calculate layout for node -> text without style/layout props 2`] = `
Array [
  Object {
    "body": Object {
      "style": null,
      "value": "Hello World",
      "x": 0,
      "y": 0,
    },
  },
]
`;
